//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Genre {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  color String [not null, default: '#fff']
  users User [not null]
  books Book [not null]
  majorBooks Book [not null]
  similarBy Genre [not null]
  similar Genre [not null]
}

Table Review {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bookId Int [not null]
  userId Int [not null]
  emotionId Int [not null]
  text String [not null]
  tags String[] [not null]
  emotion Emotion
  book Book [not null]
  user User [not null]
}

Table Emotion {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  path String [not null]
  Review Review [not null]
}

Table History {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  time Int [not null]
  book Book [not null]
  user User
  userId Int
  bookId Int [not null]
}

Table Book {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  author String [not null]
  description String [not null]
  isbn String [not null]
  image String [not null]
  epub String [not null]
  color String [not null, default: '#fff']
  pages Int [not null]
  likedPercentage Int [not null]
  popularity Int [not null, default: 0]
  mainGenreId Int [not null]
  majorGenre Genre [not null]
  histories History [not null]
  genres Genre [not null]
  reviews Review [not null]
  shelves Shelf [not null]
  likedBy User [not null]
  finishedBy User [not null]
  readingBy User [not null]
}

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  name String
  picture String
  password String [not null]
  isAdmin Boolean [not null, default: false]
  history History [not null]
  review Review [not null]
  initialGenre Genre [not null]
  likedBooks Book [not null]
  finishedBooks Book [not null]
  readingBooks Book [not null]
  watchedShelves Shelf [not null]
  unwatchedShelves Shelf [not null]
}

Table Shelf {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [unique, not null]
  description String [default: '']
  image String [not null, default: '']
  icon String [not null, default: '']
  watched User [not null]
  unwatched User [not null]
  color String [not null, default: '#fff']
  books Book [not null]
}

Ref: Review.emotionId > Emotion.id

Ref: Review.bookId > Book.id

Ref: Review.userId > User.id

Ref: History.bookId > Book.id

Ref: History.userId > User.id

Ref: Book.mainGenreId > Genre.id